--- a/cliente/package.json
+++ b/cliente/package.json
@@ -25,6 +25,8 @@
     "@capacitor/keyboard": "5.0.0",
     "@capacitor/status-bar": "5.0.0",
     "@ionic/angular": "^7.0.0",
+    "@ngrx/store": "^15.2.0",
+    "@ngrx/store-devtools": "^15.2.0",
     "bootstrap": "^5.3.1",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
@@ -48,6 +50,7 @@
     "@capacitor/cli": "5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@ionic/lab": "3.2.15",
+    "@ngrx/eslint-plugin": "^16.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
