--- a/servidor/package.json
+++ b/servidor/package.json
@@ -25,7 +25,8 @@
     "@babel/core": "^7.21.8",
     "@babel/node": "^7.19.1",
     "@babel/preset-env": "^7.18.10",
+    "eslint": "^8.48.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   }
 }
