--- a/cliente/package.json
+++ b/cliente/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^7.0.0",
     "@ngrx/store": "^15.2.0",
     "@ngrx/store-devtools": "^15.2.0",
+    "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.1",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
