--- a/cliente/angular.json
+++ b/cliente/angular.json
@@ -37,7 +37,7 @@
               }
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
-            "scripts": [              
+            "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
@@ -78,6 +78,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "disableHostCheck": true
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
